--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1 >SEDANS</h1>
 </div>
 
-<div class="box3">
+<div class="box3-1">
     <p >
         Choose a sedan for its
         <br>
@@ -48,7 +48,7 @@
     </p>
 </div>
 
-<div class="box4">
+<div class="box4-1">
 <button class="btn btn1">Learn More  
 </button>
 </div>
@@ -82,7 +82,7 @@
     <h1 >SUVS</h1>
 </div>
 
-<div class="box3">
+<div class="box3-2">
     <p>
     Take an suvs for its spacious
     <br>
@@ -95,7 +95,7 @@
     off-road adventures.
 </p>
 </div>
-<div class="box4"></div>
+<div class="box4-2"></div>
 <button class="btn btn2">Learn More    
 </button>
     </div>
@@ -125,7 +125,7 @@
     <h1 >LUXURY</h1>
 </div>
 
-<div class="box3">
+<div class="box3-3">
     <p>
     Cruis in the best car brands
     <br>
@@ -139,7 +139,7 @@
 </p>
 </div>
 
-<div class="box4">
+<div class="box4-3">
     <button class="btn btn3">Learn More    
     </button>
 </div>
