--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </p>
 </div>
 
-<div class="box4-1">
+<div class="box4">
 <button class="btn btn1">Learn More  
 </button>
 </div>
@@ -95,9 +95,10 @@
     off-road adventures.
 </p>
 </div>
-<div class="box4-2"></div>
+<div class="box4">
 <button class="btn btn2">Learn More    
 </button>
+</div>
     </div>
 
     <!------------------------------------------------------------------------------------------------------------------ -->
@@ -139,7 +140,7 @@
 </p>
 </div>
 
-<div class="box4-3">
+<div class="box4">
     <button class="btn btn3">Learn More    
     </button>
 </div>
